adding stop watch image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div style="text-align:center">
-  <h1>
+  <h1 style="background: linear-gradient(to right, #7d12da, #386df1); -webkit-background-clip: text; color: transparent;">
     Welcome to {{ title }}!
   </h1>
 </div>
