--- a/src/app/timer/timer.component.scss
+++ b/src/app/timer/timer.component.scss
@@ -3,10 +3,12 @@
 div {
   text-align: center;
   margin-top: 20px;
-
+}
   h2 {
-    font-size: 2em;
+    font-size: 2.5em;
     margin-bottom: 10px;
+    margin-top: 90px;
+    margin-bottom: 170px;
   }
 
   button {
@@ -27,4 +29,12 @@ div {
       cursor: not-allowed;
     }
   }
-}
+  .container {
+    position: relative;
+    background: url(/assets/clock.jpg) center no-repeat;
+    height: 260px;
+    color: white;
+    text-align: center;
+    padding: 20px;
+  }
+// }
