--- a/src/app/timer/timer.component.scss
+++ b/src/app/timer/timer.component.scss
@@ -31,7 +31,7 @@ div {
   }
   .container {
     position: relative;
-    background: url(/assets/clock.jpg) center no-repeat;
+    background: url(assets/clock.jpg) center no-repeat;
     height: 260px;
     color: white;
     text-align: center;
